[package]
name = "conways_game_of_life"
version = "0.1.0"
edition = "2021"
author = "Coder4360 (godergd@gmail.com)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable Link Time Optimization.
opt-level = 3 # Optimize for speed.